16.9
-----
 
16.8
-----
* [**] Prevent deleting published homepages which would have the effect of breaking a site. [#15797]
* [**] Prevent converting published homepage to a draft in the page list and settings which would have the effect of breaking a site. [#15797]
* [*] Fix app crash when device is offline and user visits Notification or Reader screens [#15916]
* [*] Under-the-hood improvements to the Reader Stream, People Management, and Sharing Buttons [#15849, #15861, #15862]
* [*] Block Editor: Fixed block mover title wording for better clarity from 'Move block position' to 'Change block position'. [https://github.com/wordpress-mobile/gutenberg-mobile/pull/3049]
* [**] Block Editor: Add support for setting Cover block focal point. [https://github.com/wordpress-mobile/gutenberg-mobile/pull/3028]
* [**] Prevent converting published homepage to a draft in the page list and editor's status settings which would have the effect of breaking a site. [#15797]
* [*] Prevent selection of unpublished homepages the homepage settings which would have the effect of breaking a site. [#15885]
* [*] Quick Start: Completing a step outside of a tour now automatically marks it as complete. [#15712]
* [internal] Site Comments: updated UI. Should be no functional changes. [#15944]
* [***] iOS 14 Widgets: new This Week Widgets to display This Week Stats in your home screen. [#15844]
* [***] Stories: There is now a new Story post type available to quickly and conveniently post images and videos to your blog.

16.7
-----
* [**] Site Creation: Adds the option to choose between mobile, tablet or desktop thumbnails and previews in the home page design picker when creating a WordPress.com site [https://github.com/wordpress-mobile/WordPress-iOS/pull/15688]
* [*] Block Editor: Fix issue with uploading media after exiting the editor multiple times [https://github.com/wordpress-mobile/WordPress-iOS/pull/15656].
* [**] Site Creation: Enables dot blog subdomains for each site design. [#15736]