@@ -542,7 +542,7 @@ extension CollapsableHeaderViewController: UIScrollViewDelegate {
         }
     }
 
-    private func updateTitleViewVisibility(_ animated: Bool = true) {
+    internal func updateTitleViewVisibility(_ animated: Bool = true) {
         let shouldHide = shouldUseCompactLayout ? false : (headerHeightConstraint.constant > midHeaderHeight)
         titleView.animatableSetIsHidden(shouldHide, animated: animated)
     }
@@ -592,6 +592,11 @@ extension CollapsableHeaderViewController: UIScrollViewDelegate {
         } else if headerHeightConstraint.constant != minHeaderHeight {
             snapToHeight(scrollView, height: minHeaderHeight)
         }
+    }
+
+    public func expandHeader() {
+        guard !shouldUseCompactLayout else { return }
+        snapToHeight(scrollableView, height: maxHeaderHeight)
     }
 
     private func snapToHeight(_ scrollView: UIScrollView, height: CGFloat, animated: Bool = true) {
